fixed spacing issue

--- a/css/app.css
+++ b/css/app.css
@@ -60,17 +60,26 @@ img {
 /* Header Stylings */
 
 .intro {
+  height: 100%;
   cursor: pointer;
   margin: 0;
 }
 
-.intro p:hover {
+.intro:hover {
 	color: #0062FF;
 }
 
 .description {
+  height: 100%;
   color: #0062FF;
-  margin: 1.5rem 0 0 2rem;
+  display: inline-block;
+  padding: 1.75rem 0 1.75rem 1.75rem;
+}
+
+@media screen and (min-width: 40em) {
+.description {
+  padding: 1.75rem 0 0 1.75rem;
+}
 }
 
 #name2, #designer2, #inventor2, #illustrator2, #dude2 {
@@ -134,7 +143,7 @@ p {
   font-size: 1rem;
   line-height: 1.5rem;
   letter-spacing: 0;
-  margin:0;
+  margin-bottom: 1rem;
 }
 
 ul {
@@ -313,7 +322,7 @@ button:hover {
   display: none;
   position: absolute;
   overflow: hidden;
-  top: 2rem;
+  top: 2.5rem;
   background-color: #fff;
   border-radius: 4px;
   min-width: 216px;
@@ -328,9 +337,9 @@ button:hover {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  font-size: 1rem;
-  line-height: 2rem;
-  padding: .5rem 1rem;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  padding: .75rem 1rem;
   text-decoration: none;
   display: block;
 }
@@ -348,13 +357,6 @@ button:hover {
   border-radius: 100%;
 }
 */
-
-@media screen and (min-width: 40em) {
-.dropdown-content a {
-    font-size: 1.5rem;
-    padding: .75rem 1rem;
-}
-}
 
 .currentpage {
   border-left: 4px solid #0062FF;
